starting background jobs